@@ -9,6 +9,7 @@ versions = versions
 Jinja2 = 2.7
 Mako = 0.6.2
 MarkupSafe = 0.15
+PyYAML = 3.10
 Pygments = 1.6
 Sphinx = ${versions:sphinx}
 Sphinx-PyPI-upload = 0.2.1
